--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "pnpm -r build",
+    "build": "pnpm --filter @y-modules/core build && pnpm --filter @y-modules/demo-app build",
     "test": "pnpm -r test",
     "dev": "pnpm -r dev"
   },
