--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,8 +16,13 @@
     "access": "public"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3",
+    "tslib": "^2.6.2"
   }
 } 
