--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,6 @@ shamefully-hoist=true
 strict-peer-dependencies=false
 auto-install-peers=true
 prefer-frozen-lockfile=false
-resolution-mode=highest 
+resolution-mode=highest
+recursive-install=true
+link-workspace-packages=true 
