--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "pnpm --filter @y-modules/core build && pnpm --filter @y-modules/demo-app build",
     "test": "pnpm -r test",
-    "dev": "pnpm -r dev",
-    "postinstall": "pnpm install --no-frozen-lockfile"
+    "dev": "pnpm -r dev"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
